--- a/Example004 ifelse/Example004 ifelse.csproj
+++ b/Example004 ifelse/Example004 ifelse.csproj
@@ -1,11 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+Console.Write("Введите имя пользователя: ");
+string username = Console.ReadLine();
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>Example004_ifelse</RootNamespace>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-
-</Project>
+if(username.ToLower() == "Маша")
+{
+    Console.WriteLine("Ура, это Маша!");
+}
+else
+{
+    Console.Write("Привет, ");
+    Console.WriteLine (username);
+}
